# c_compiler

./: CMakeLists.txt  Dockerfile  Makefile  management.md  run_in_host.sh  test.sh
.github/workflows/: docker-image.yml
compiler_tests/array/: array_inc.c  array_inc_driver.c  array_param_syntax.c  array_param_syntax_driver.c  array_plus_int.c  array_plus_int_driver.c  global_array_use.c  global_array_use_driver.c  global_multiple_vars.c  global_multiple_vars_driver.c  global_shadowing.c  global_shadowing_driver.c  global_struct_array.c  global_use.c  (+18 more)
include/: ast.hpp  ast_additive_expression.hpp  ast_aggregate_type_definition.hpp  ast_and_expression.hpp  ast_argument_expression_list.hpp  ast_array_declarator.hpp  ast_array_index_expression.hpp  ast_assignment_expression.hpp  ast_bindings.hpp  ast_break_statement.hpp  ast_compound_statement.hpp  ast_conditional_expression.hpp  ast_constant.hpp  ast_constant_expression.hpp  ast_context.hpp  ast_continue_statement.hpp  ast_declaration.hpp  ast_declaration_list.hpp  ast_declaration_specifiers.hpp  ast_declarator.hpp  ast_direct_declarator.hpp  ast_enum_specifier.hpp  ast_enumerator.hpp  ast_enumerator_list.hpp  ast_enums.hpp  ast_equality_expression.hpp  ast_exclusive_or_expression.hpp  ast_expression.hpp  ast_expression_base.hpp  ast_expression_statement.hpp  ast_external_declaration.hpp  ast_function_call_expression.hpp  ast_function_declarator.hpp  ast_function_definition.hpp  ast_identifier.hpp  ast_if_statement.hpp  ast_inclusive_or_expression.hpp  ast_init_declarator.hpp  ast_init_declarator_list.hpp  ast_initializer.hpp  (+35 more)
scripts/: test.py
src/: ast_additive_expression.cpp  ast_aggregate_type_definition.cpp  ast_and_expression.cpp  ast_argument_expression_list.cpp  ast_array_declarator.cpp  ast_array_index_expression.cpp  ast_assignment_expression.cpp  ast_bindings.cpp  ast_compound_statement.cpp  ast_conditional_expression.cpp  ast_constant.cpp  ast_constant_expression.cpp  ast_context.cpp  ast_declaration.cpp  ast_declaration_list.cpp  ast_declaration_specifiers.cpp  ast_declarator.cpp  ast_direct_declarator.cpp  ast_enum_specifier.cpp  ast_enumerator.cpp  ast_enumerator_list.cpp  ast_enums.cpp  ast_equality_expression.cpp  ast_exclusive_or_expression.cpp  ast_expression.cpp  ast_expression_statement.cpp  ast_external_declaration.cpp  ast_function_call_expression.cpp  ast_function_declarator.cpp  ast_function_definition.cpp  ast_identifier.cpp  ast_if_statement.cpp  ast_inclusive_or_expression.cpp  ast_init_declarator.cpp  ast_init_declarator_list.cpp  ast_initializer.cpp  ast_initializer_list.cpp  ast_iteration_statement.cpp  ast_jump_statement.cpp  ast_labeled_statement.cpp  (+31 more)
(+189 files in other folders)
